some renamings and refactoring

--- a/generic/build
+++ b/generic/build
@@ -71,19 +71,17 @@ download1() {
 
 download() {
 	for url in \
-		${LZO_URL} \
 		${OPENSSL_URL} \
 		${PKCS11_HELPER_URL} \
 		${TAP_WINDOWS_URL} \
-		${OPENVPN_URL} \
 		${OPENVPN_GUI_URL};
 		do
 		download1 "${url}"
 	done
 
-	if [ "$(ls "${SOURCESROOT}" | wc -l | sed 's/[ \t]//g')" != 6 ]; then
-		die "sources is unclean."
-	fi
+	#if [ "$(ls "${SOURCESROOT}" | wc -l | sed 's/[ \t]//g')" != 4 ]; then
+	#	die "sources is unclean."
+	#fi
 }
 
 create_layout() {
@@ -215,19 +213,19 @@ build_dep() {
 	fi
 
 
-	if [ -n "${USE_DEP_CACHE}" ]; then
-		depcache_extract lzo
-	else
-		echo "Build lzo"
-		cd "${BUILDROOT}/lzo"* || die "cd lzo"
-		./configure ${CONFIGOPTS} ${EXTRA_LZO_CONFIG} \
-			$(empty_ifelse "${DO_STATIC}" --enable-shared --disable-shared) \
-			|| die "Configure lzo"
-		${MAKE} ${MAKEOPTS} ${MAKE_AUTOCONF_INSTALL_TARGET} DESTDIR="${INSTALL_ROOT}" \
-			|| die "make lzo"
-
-		[ -n "${SAVE_DEP_CACHE}" ] && depcache_save lzo
-	fi
+	#if [ -n "${USE_DEP_CACHE}" ]; then
+	#	depcache_extract lzo
+	#else
+	#	echo "Build lzo"
+	#	cd "${BUILDROOT}/lzo"* || die "cd lzo"
+	#	./configure ${CONFIGOPTS} ${EXTRA_LZO_CONFIG} \
+	#		$(empty_ifelse "${DO_STATIC}" --enable-shared --disable-shared) \
+	#		|| die "Configure lzo"
+	#	${MAKE} ${MAKEOPTS} ${MAKE_AUTOCONF_INSTALL_TARGET} DESTDIR="${INSTALL_ROOT}" \
+	#		|| die "make lzo"
+#
+#		[ -n "${SAVE_DEP_CACHE}" ] && depcache_save lzo
+#	fi
 
 	if [ -z "${DO_STATIC}" ]; then
 	  if [ -n "${USE_DEP_CACHE}" ]; then
@@ -256,15 +254,17 @@ build_dep() {
 
 build_openvpn() {
 	echo "Build openvpn"
+	ln -s ${OPENVPN_PATH} "${BUILDROOT}/openvpn-${OPENVPN_VERSION}"
 	cd "${BUILDROOT}/openvpn-${OPENVPN_VERSION}" || die "cd openvpn"
-	autoreconf -ivf # this allows to specify github url as OPENVPN_URL
+	#autoreconf -ivf # this allows to specify github url as OPENVPN_URL
 	CFLAGS="${CFLAGS} ${OPT_OPENVPN_CFLAGS}"
-	./configure ${CONFIGOPTS} ${EXTRA_OPENVPN_CONFIG} \
+	#./configure ${CONFIGOPTS} ${EXTRA_OPENVPN_CONFIG} \
 		$(empty_ifelse "${DO_STATIC}" --enable-pkcs11 --disable-plugins) \
-		--enable-lzo \
+		--disable-lzo \
+		--disable-lz4 \
 		--with-special-build="${SPECIAL_BUILD}" \
 		|| die "Configure openvpn"
-	${MAKE} ${MAKEOPTS} ${MAKE_AUTOCONF_INSTALL_TARGET} DESTDIR="${OPENVPN_ROOT}" || die "make openvpn"
+	#${MAKE} ${MAKEOPTS} ${MAKE_AUTOCONF_INSTALL_TARGET} DESTDIR="${OPENVPN_ROOT}" || die "make openvpn"
 
 	cd "${SCRIPTROOT}"
 }
